--- a/package.json
+++ b/package.json
@@ -29,20 +29,26 @@
   "homepage": "https://github.com/PLG-Works/ghost-hosting-cli#readme",
   "dependencies": {
     "cdktf": "^0.11.2",
-    "constructs": "^10.1.37"
+    "commander": "^9.3.0",
+    "constructs": "^10.1.37",
+    "prompt-sync": "^4.2.0",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
-    "prettier": "^2.6.2",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.7.3",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.42",
     "jest": "^28.1.1",
+    "prettier": "^2.6.2",
     "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1"
+    "ts-node": "^10.8.1",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.7.3"
   },
   "files": [
     "build/**/*"
-  ]
+  ],
+  "bin": {
+    "plg-gh": "npx ts-node bin/installer"
+  }
 }
