--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.2",
     "@types/jest": "^28.1.1",
     "@types/node": "^17.0.42",
+    "@types/prompt-sync": "^4.1.1",
+    "@types/shelljs": "^0.8.11",
     "jest": "^28.1.1",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.4",
