--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "commander": "^9.3.0",
     "constructs": "^10.1.37",
     "prompt-sync": "^4.2.0",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "cdktf-cli": "^0.11.2"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
