--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cdktf-cli": "0.11.2",
     "commander": "9.3.0",
     "constructs": "10.1.37",
+    "parse-domain": "^7.0.1",
     "readline-sync": "1.4.10",
     "shelljs": "0.8.5"
   },
