--- a/package.json
+++ b/package.json
@@ -33,23 +33,24 @@
     "cdktf-cli": "0.11.2",
     "commander": "9.3.0",
     "constructs": "10.1.37",
-    "parse-domain": "^7.0.1",
+    "psl": "1.9.0",
     "readline-sync": "1.4.10",
-    "shelljs": "0.8.5"
+    "shelljs": "0.8.5",
+    "typescript": "4.7.3",
+    "ts-node": "10.8.1",
+    "@types/commander": "2.12.2",
+    "@types/jest": "28.1.1",
+    "@types/node": "17.0.42",
+    "@types/readline-sync": "1.4.4",
+    "@types/shelljs": "0.8.11",
+    "@types/psl": "1.1.0"
   },
   "devDependencies": {
-    "@types/commander": "^2.12.2",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.42",
-    "@types/readline-sync": "^1.4.4",
-    "@types/shelljs": "^0.8.11",
     "jest": "^28.1.1",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.4",
-    "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.7.3"
+    "tslint-config-prettier": "^1.18.0"
   },
   "files": [
     "build/**/*"
