--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-*.d.ts
-*.js
+build/*
 cdktf.out
 cdktf.log
-*terraform.*.tfstate*
-.terraform
+terraform.*
 tsconfig.tsbuildinfo
-!jest.config.js
-!setup.js
 config.json
 .gen
 
@@ -15,31 +11,12 @@ config.json
 /.idea/*
 .vscode
 
-*.log
-
-# dotenv environment variables file
-.env
-.env.test
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
 # Dependency directory
 # https://docs.npmjs.com/cli/shrinkwrap#caveats
 node_modules
 package-lock.json
 
-# Optional npm cache directory
-.npm
-npm-debug.log*
-
 # Optional eslint cache
 .eslintcache
-
-# Dev Folder
-.dev
 
 .DS_Store
