--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "ghost-hosting-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "Host Ghost in AWS ECS and provision to host static files on AWS S3",
   "main": "./src/driver.ts",
   "scripts": {
     "build": "tsc",
     "get": "cdktf get",
+    "diff": "cdktf diff",
+    "auto-deploy": "cdktf deploy --auto-approve",
     "synth": "cdktf synth",
     "compile": "tsc --pretty",
     "watch": "tsc -w",
@@ -14,7 +16,7 @@
     "upgrade": "npm i cdktf@latest cdktf-cli@latest",
     "upgrade:next": "npm i cdktf@next cdktf-cli@next",
     "format": "prettier --write \"src/*\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -35,22 +37,22 @@
     "constructs": "10.1.37",
     "psl": "1.9.0",
     "readline-sync": "1.4.10",
-    "shelljs": "0.8.5",
-    "typescript": "4.7.3",
-    "ts-node": "10.8.1",
-    "@types/commander": "2.12.2",
-    "@types/jest": "28.1.1",
-    "@types/node": "17.0.42",
-    "@types/readline-sync": "1.4.4",
-    "@types/shelljs": "0.8.11",
-    "@types/psl": "1.1.0"
+    "shelljs": "0.8.5"
   },
   "devDependencies": {
-    "jest": "^28.1.1",
-    "prettier": "^2.6.2",
-    "ts-jest": "^28.0.4",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "@types/jest": "28.1.1",
+    "@types/node": "17.0.42",
+    "@types/psl": "1.1.0",
+    "@types/readline-sync": "1.4.4",
+    "@types/shelljs": "0.8.11",
+    "@typescript-eslint/eslint-plugin": "5.35.1",
+    "@typescript-eslint/parser": "5.35.1",
+    "eslint": "^8.22.0",
+    "jest": "28.1.1",
+    "prettier": "2.6.2",
+    "ts-jest": "28.0.4",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.3"
   },
   "files": [
     "build/**/*"
