--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ghost-hosting-cli",
   "version": "1.0.0",
   "description": "Host Ghost in AWS ECS and provision to host static files on AWS S3",
-  "main": "./src/driver.ts",
+  "main": "./run",
   "scripts": {
     "build": "tsc",
     "get": "cdktf get",
@@ -17,15 +17,27 @@
     "upgrade": "npm i cdktf@latest cdktf-cli@latest",
     "upgrade:next": "npm i cdktf@next cdktf-cli@next",
     "format": "prettier --write \"src/*\"",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prepare": "echo 'prepare called'",
+    "prepublishOnly": "echo 'prepublishOnly called'",
+    "preversion": "echo 'preversion called'",
+    "version": "echo 'version called'",
+    "postversion": "echo 'postversion called'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PLG-Works/ghost-hosting-cli.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "ghost",
+    "blog",
+    "aws",
+    "terraform",
+    "cdktf",
+    "devops"
+  ],
+  "author": "PLG Works",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/PLG-Works/ghost-hosting-cli/issues"
   },
@@ -48,7 +60,7 @@
     "@types/shelljs": "0.8.11",
     "@typescript-eslint/eslint-plugin": "5.35.1",
     "@typescript-eslint/parser": "5.35.1",
-    "eslint": "^8.22.0",
+    "eslint": "8.22.0",
     "jest": "28.1.1",
     "prettier": "2.6.2",
     "ts-jest": "28.0.4",
@@ -56,7 +68,7 @@
     "typescript": "4.7.3"
   },
   "files": [
-    "build/**/*"
+    "dist/**/*"
   ],
   "bin": {
     "plg-ghost": "./run"
